@@ -3,4 +3,8 @@ Reminder plugin for mantis Bugtracker.
 
 # Mantis Reminder :
 Ce plugin permets d'envoyer un email récapitulatif des emails à traiter à chaque développeur de manière hebdommadaire ( via une tâche cron )
+
 http://www.h-hennes.fr/blog/2013/07/24/mantis-bugtracker-plugin-denvoi-dun-recapitulatif-hebdomadaire-des-bugs/ (FR)
+
+Ce plugin est compatible avec mantis 1.3.x  
+Une version compatible avec les versions 1.2.x est disponible sur la branche 1.2.x
