@@ -1,12 +1,25 @@
 <?php
+# MantisBT - A PHP based bugtracking system
+# MantisBT is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 2 of the License, or
+# (at your option) any later version.
+#
+# MantisBT is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with MantisBT.  If not, see <http://www.gnu.org/licenses/>.
 
-/**
-  Plugin Reminder pour Mantis BugTracker :
+#
+#  Reminder Plugin for Mantis BugTracker :
+#  - Send recapitulative email to developpers 
+#  © Hennes Hervé <contact@h-hennes.fr>
+#    2013-2016
+#  http://www.h-hennes.fr/blog/
 
-  - Envoi d'un email récapitulatif des échéances de la semaine aux développeurs
-
-  @autor Hervé Hennes <contact@h-hennes.fr> 2013-2016
- */
 auth_reauthenticate();
 access_ensure_global_level(config_get('manage_plugin_threshold'));
 
