@@ -1,11 +1,25 @@
 <?php
+# MantisBT - A PHP based bugtracking system
+# MantisBT is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 2 of the License, or
+# (at your option) any later version.
+#
+# MantisBT is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with MantisBT.  If not, see <http://www.gnu.org/licenses/>.
 
-/**
-  Plugin Reminder pour Mantis BugTracker :
-  Page appellée via cron de manière hebdomadaire pour envoyer un récapitulatif des bugs en attente de traitement
-  @autor Hervé Hennes <contact@h-hennes.fr>
-  2013 - 2016
- */
+#
+#  Reminder Plugin for Mantis BugTracker :
+#  - Send recapitulative email to developpers 
+#  © Hennes Hervé <contact@h-hennes.fr>
+#    2013-2016
+#  http://www.h-hennes.fr/blog/
+
 require_once( dirname(__FILE__) . '/../../../core.php' );
 
 #Recherche des informations sur les bugs
