@@ -1,3 +1,4 @@
 2015-03-06 - V 0.1.0 + 0.1.1 : Version initiale du module 
 2016-01-09 - V 0.1.2 : Ajout de logs
 2016-03-01 - V 0.1.3 : Correctif page de configuration
+2016-07-27 - V 0.1.4 : Compatibilité mantis 1.3
